# Sentinel-Multiplayer

./: .gitignore  CMakeLists.txt  README.md  context_dump.txt  vcpkg-configuration.json  vcpkg.json
assets/shaders/: drone.frag  drone.vert  grass.frag  grass.vert  warthog.frag  warthog.vert  water_reflect.frag  water_reflect.vert
include/client/: camera.hpp  interp_buffer.hpp  math.hpp  render_clouds.hpp  render_drone.hpp  render_drone_mesh.hpp  render_drone_shader.hpp  render_grid.hpp  render_sky.hpp  render_terrain.hpp  shader_loader.hpp  snapshot_interp.hpp
include/net/: net_api.cpp  net_api.hpp  net_event.hpp
include/sentinel/net/: net_api.hpp
include/sentinel/net/protocol/: chat.hpp  events.hpp  protocol.hpp  protocol_ids.hpp  snapshot.hpp
include/sentinel/net/replication/: replication_client.hpp  snapshot_buffer.hpp
include/sentinel/net/transport/: udp_socket.hpp
include/sentinel/sim/: sim.hpp  sim_state.hpp  sim_update.hpp
src/: client_main.cpp  firework.cpp  firework.hpp  server_main.cpp  swarm_update.cpp
src/client/: client_main.cpp  render_clouds.cpp  render_drone_mesh.cpp  render_drone_shader.cpp  render_sky.cpp  render_terrain.cpp  runmode.hpp  shader_loader.cpp
src/client/audio/: audio_system.cpp  audio_system.hpp
src/client/drone/: drone_controller.hpp
src/client/input/: control_system.cpp  control_system.hpp
src/client/render/: camera.hpp  render_drone_mesh.cpp  render_drone_mesh.hpp  render_drone_shader.cpp  render_drone_shader.hpp  render_sky.cpp  render_sky.hpp  render_stats.hpp  render_terrain.cpp  render_terrain.hpp  shader_util.cpp  shader_util.hpp  warthog_shader.cpp  warthog_shader.hpp  water_reflect_shader.cpp  water_reflect_shader.hpp
src/client/util/: math_util.cpp  math_util.hpp
src/client/vehicles/drone/: drone_controller.cpp
src/client/vehicles/walker/: render_walker.cpp  render_walker.hpp  walker_controller.cpp  walker_controller.hpp
src/client/vehicles/warthog/: render_warthog.cpp  render_warthog.hpp  warthog_controller.cpp  warthog_controller.hpp
src/client/vfx/: combat_fx.cpp  combat_fx.hpp
src/client/vr/: openxr_helper.cpp  openxr_helper.hpp
src/client/world/: npc_system.cpp  npc_system.hpp
src/net/: net_api.cpp  net_stub.cpp  net_udp_win.cpp
src/net/replication/: replication_client.cpp  snapshot_buffer.cpp
src/net/transport/: udp_linux.cpp  udp_win.cpp
src/server/: server_main.cpp
src/sim/: sim.cpp  sim_update.cpp
